# cvrp-experiments

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
scripts/: collect_tsp_solution_data.py  compare_tsp_solutions.py  solve_cvrp.py  visualize_belief_state.py  visualize_vrp_solutions.py
src/cvrp_experiments/: belief_state.py  cvrp.py  data.py  types.py  visualization.py
tools/: setup_ws.sh
